[package]
name = "agentctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
whoami = "1.5"
jsonschema = "0.18"
